update scripts to include vimrc

--- a/scripts/install
+++ b/scripts/install
@@ -3,7 +3,10 @@
 # Read config files from repo
 REPO_ZSHRC=./zsh/.zshrc
 REPO_NVIMRC=$./vim/init.vim
+REPO_VIMRC=./vim/.vimrc
 
 # update edited file in used to this repo
 cat $REPO_ZSHRC > $HOME/.zshrc
 cat $REPO_NVIMRC > $HOME/.config/nvim/init.vim
+cat $REPO_VIMRC > $HOME/.vimrc
+
